# Clickbot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: includes.hpp  main.cpp
src/clickbot/: Clickbot.cpp  Clickbot.hpp
src/hk/: PlayLayer.cpp  PlayLayer.hpp
